# https://pypi.org/pypi?%3Aaction=list_classifiers
[metadata]
name = pyefriend
version = 1.0.1
author = Youngha Park
author_email = proyoungha@naver.com
url = https://github.com/softyoungha
description = Python API link to 'efriend expert'
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyefriend, rebalancing, efriend-expert
description-file = README.md
platforms = Windows
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial :: Investment
license = 'MIT'

[options]
python_requires = >=3
packages = find:

[options.packages.find]
include =
    pyefriend
    rebalancing
    rebalancing.*

[options.package_data]
rebalancing =
    config.template.yml
    data/*.csv

[options.entry_points]
console_scripts =
    rebalancing = rebalancing.__main__:main